# SpotifyLightGUI

./: Cargo.toml
src/: main.rs  player.rs  session.rs
