[package]
name = "SpotifyLightGUI"
version = "0.1.0"
edition = "2024"

[dependencies]
tray-icon = "0.14"
tao = "0.25" # Fork di winit ottimizzato per tray e menu
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.24" # Aggiungi questa riga
eframe = "0.27"